2003-06-10  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Removed stream restarting

2003-06-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: SASL support updated to xmpp-core-13

2003-06-06  Alexey Shchepin  <alexey@sevcom.net>

	* src/cyrsasl*.erl: Support for authzid

2003-06-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/fr.msg: New french translation (thanks to Vincent Ricard)

2003-05-31  Alexey Shchepin  <alexey@sevcom.net>

	* src/jlib.hrl: Updated SASL namespace

2003-05-29  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_service.erl: Proper handling of bad XML

	* src/mod_muc/mod_muc_room.erl: Append number of participants in
	disco replies if requester allowed to see participant list

	* src/mod_muc/mod_muc.erl (iq_disco_items): Pass requester JID to
	room process

	* src/mod_irc/mod_irc_connection.erl: Exit on receiving of
	presence or message error

	* src/mod_irc/mod_irc_connection.erl (handle_info): Return
	"feature not implemented" on iq request with unknown namespace

2003-05-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc.erl: Now body of message from admin to MUC
	service is broadcasted to all conferences
	* src/mod_muc/mod_muc_room.erl: Likewise

2003-05-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s.erl: Added error catching for do_route/3
	* src/ejabberd_local.erl: Likewise for do_route/4

	* src/msgs/ru.msg: Updated

	* src/mod_muc/mod_muc_room.erl: New option to allow to view list
	of participants for non-ones via disco#items

	* src/mod_muc/mod_muc_room.erl: Store room subject with
	configuration options

2003-05-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Remove user from room on receiving
	of message or presence error from him

2003-05-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_out.erl: Fixed error replies, added timeouts
	* src/ejabberd_s2s_in.erl: Likewise

2003-05-09  Alexey Shchepin  <alexey@sevcom.net>
