@@ -1,3 +1,7 @@
+2003-06-20  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_c2s.erl: Returned stream restarting
+
 2003-06-10  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/ejabberd_c2s.erl: Removed stream restarting
